<resources>
    <string name="create_sample_data">Create sample data</string>
    <string name="delete_all_notes">Delete all poems</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="all_deleted">All poems deleted</string>
    <string name="title_activity_editor">EditorActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="new_note">New Poem</string>
    <string name="note_updated">Poem updated</string>
    <string name="action_delete">delete</string>
    <string name="note_deleted">Poem deleted</string>
    <string name="app_name">Stanza</string>
    <string name="poetry_editor">Poetry Editor</string>
    <string name="friend_board">Friends Board</string>
    <string name="open_friend_board">Friend Board</string>
    <string name="view_friends_poem">View Friend\'s Poem</string>
    <string name="limit_number_of_poems">10</string>
    <string name="unnamed_poem">Untitled</string>
    <string name="share_poem">Share poem</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="already_a_member_login">Already a member? Login.</string>
    <string name="login">Login</string>
    <string name="no_account_yet_create_one">No account yet? Create one</string>
    <string name="cannot_retrieve_poems">Server not connected. Cannot retrieve poems from server.</string>
    <string name="add_friend">Add friend</string>
    <string name="add_a_friend">Add a Friend</string>
    <string name="delete_all_friends">Delete All Friends</string>
    <string name="manage_friends">Manage Friends</string>
    <string name="would_you_like_to_delete_friend">Would you like to delete this friend?</string>
    <string name="delete_friend">Delete Friend</string>
    <string name="stanza">Stanza</string>

    <!--<string name="url_chunk_1">"http://api.wordnik.com:80/v4/word.json/"</string>
    <string name="url_chunk_2">"/relatedWords?useCanonical=false&limitPerRelationshipType=10&api_key="</string>
    <string name="api_key">"34b85c60a34e51f8ffa4a6f3bfe056794ea70f73f26e33123"</string> -->

</resources>
